fix(jackson3): harden PATCH binding review findings
Make PatchChange arrays immutable at the accessor, return PatchCommand<?>
from JavaType fromDocument, reject explicit null for primitives regardless
of mapper config, and keep freezeValue private.